# StreetsOfAce

./: .gitignore  CMakeLists.txt  README.md  vimes_and_death.md
Tools/: .gitignore  README.md  process_all_gifs.py
Tools/gifd_tools/: README.md  gif_delta_reader.c  gif_delta_reader.h
Tools/gifdelta/: batch_process_gifs.py  requirements.txt
Tools/gifdelta/graveyard_deltas/: metadata.json
gifd_tools/: GIFD_FORMAT_SPECIFICATION.md  Makefile  json_to_binary_converter.py
gifdelta/: README.md  example_usage.py  gif_delta_extractor.py
src/: main.c
